--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=purTFbLmpQS01RxLLSziUOafav1MFbz7
 
 DB_HOST=localhost
-DB_DATABASE=laravel
-DB_USERNAME=laravel
-DB_PASSWORD=
+DB_DATABASE=laravel5
+DB_USERNAME=laravel5
+DB_PASSWORD=laravel5
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
